<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/totAmount"
        android:text="@string/totAmount" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btFifteen"
        android:layout_below="@+id/btFifteen"
        android:layout_marginTop="96dp"
        android:text="@string/tipAmnt" />

    <Button
        android:id="@+id/btTen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_centerVertical="true"
        android:text="@string/ten"
        android:onClick="tip10" />
    
    <Button
        android:id="@+id/btFifteen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTen"
        android:layout_alignBottom="@+id/btTen"
        android:layout_centerHorizontal="true"
        android:text="@string/fifteen"
        android:onClick="tip15" />

    <Button
        android:id="@+id/btTwenty"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTip"
        android:layout_alignRight="@+id/etAmount"
        android:text="@string/twenty"
        android:onClick="tip20" />

    

</RelativeLayout>
